--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,25 @@ on:
     push:
         branches:
             - main
+        paths-ignore:
+            - "*"
+        paths:
+            - "*.go"
     pull_request:
         branches:
             - main
+        paths-ignore:
+            - "*"
+        paths:
+            - "*.go"
 
 jobs:
     test:
         runs-on: self-hosted
+
+        strategy:
+          matrix:
+              os: [ubuntu-22.04, ubuntu-20.04, ubuntu-18.04, ubuntu-16.04]
 
         steps:
             - name: Checkout code
