update unit tests in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,6 @@ jobs:
                 easy-package-installer nginx
 
             - name: Run Unit Tests
-              run: go test ./...
+              run: |
+                apt update && apt install golang-go -y
+                go test ./...
