--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ on:
     pull_request:
         branches:
             - main
-        paths:
-            - ".github/workflows/main.yml"
-            - "*.go"
+#        paths:
+#            - ".github/workflows/main.yml"
+#            - "*.go"
 
 jobs:
     test:
