--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ on:
     pull_request:
         branches:
             - main
-#        paths:
-#            - ".github/workflows/main.yml"
-#            - "*.go"
+        paths:
+            - "*.go"
+    manual:
+        types: [run_workflow]
 
 jobs:
     test:
