add workflow_dispatch to main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,7 @@ on:
             - main
         paths:
             - "*.go"
-    manual:
-        types: [run_workflow]
+    workflow_dispatch:
 
 jobs:
     test:
